// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartButton should render the badge if products have been added into the cart 1`] = `
<DocumentFragment>
  <a
    class="shopping_cart_link"
    data-test="shopping-cart-link"
  >
    <span
      class="shopping_cart_badge"
      data-test="shopping-cart-badge"
    >
      3
    </span>
  </a>
</DocumentFragment>
`;

exports[`CartButton should render with default props 1`] = `
<DocumentFragment>
  <a
    class="shopping_cart_link"
    data-test="shopping-cart-link"
  />
</DocumentFragment>
`;
